--- a/web/roles/apache2/templates/index.html.j2
+++ b/web/roles/apache2/templates/index.html.j2
@@ -1,1 +1,7 @@
 hola al servidor {{ ansible_fqdn }}
+
+#colocamos un condicional if
+
+{% if ansible_distribution == "Ubuntu" %}
+Este sistemas es un Ubuntu
+{% endif %}
