18-template lists usuario  v2

--- a/web/roles/apache2/templates/index.html.j2
+++ b/web/roles/apache2/templates/index.html.j2
@@ -5,3 +5,8 @@ hola al servidor {{ ansible_fqdn }}
 {% if ansible_distribution == "Ubuntu" %}
 Este sistemas es un Ubuntu
 {% endif %}
+
+Lista de usuarios:
+{% for usuario in lista_usuarios %}
+{{ usuario }}
+{% endfor %}
